third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/default_and_catch_all.stderr
error: Attribute `catch_all` is mutually exclusive with `default`
 --> tests/try_build/compile_fail/default_and_catch_all.rs:6:16
  |
6 |     #[num_enum(catch_all)]
  |                ^^^^^^^^^
